<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/locationAddress"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"
       />

    <EditText
        android:id="@+id/editTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginBottom="8dp"
        android:minHeight="48dp"
        android:paddingVertical="12dp"
        android:hint="@string/locationAddress"/>



    <!-- Dugmad -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDeleteLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonDelete"
            android:backgroundTint="@color/red"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:minHeight="48dp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/buttonUpdateLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonUpdate"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:minHeight="48dp"
            style="@style/ButtonPrimaryStyle"/>
    </LinearLayout>

</LinearLayout>
